refactor: Updated customer listing to use req.query for parameter passing
