# src/modules/customers/customersRoutes.ts
@@ -12,12 +12,12 @@ const router = Router();
 
 router.use(authenticateUser);
 
-router.get('/customers/page/:page/pageSize/:pageSize', getAllCustomers);
+router.get('/customers/', getAllCustomers);
 
 router.get('/customers/:id', getCustomer);
 
-router.put('/customers/update/:id', validateUpdateCustomerData, updateCustomer);
+router.put('/customers/:id', validateUpdateCustomerData, updateCustomer);
 
-router.delete('/customers/delete/:ids', deleteCustomers);
+router.delete('/customers/:ids', deleteCustomers);
 
 export default router;
